# simple-text-markup

./: .editorconfig  .gitignore  LICENSE  README.md  new_sample.stm  pyproject.toml  requirements.txt
src/SimpleTextMarkup/: __init__.py  cli.py  convert.py  converter.py
src/SimpleTextMarkup/impl_/: __init__.py  ast.py  context.py  formatter.py  formatter_classes.py  linesrc.py  options.py
src/SimpleTextMarkup/renderer/: __init__.py  html_render.py  type.py
tests/: 01_simple_test.py  10_formatter_test.py  10_paragraph_test.py  20_list_test.py  20_list_tests.py  30_oneliner_test.py  class_test.py  formatter_test.py  simple_test.py  use_classes_option_test.py
