[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "SimpleTextMarkup"
authors = [{name = "Mark Hollomon"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "regex",
]

[project.scripts]
stm = "SimpleTextMarkup.cli:main"

[tool.pytest.ini_options]
pythonpath = "src"
